--- a/tour/src/main/resources/application.yml
+++ b/tour/src/main/resources/application.yml
@@ -4,8 +4,9 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/tour?useSSL=false
     username: root
-    password: 1234
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-mybatis-plus:
-  mapper-locations: classpath*:/mapper/*.xml
-  type-aliases-package: com.example.project.entity
+mybatis:
+  type-aliases-package: com.example.tour.entity
+  configuration:
+    map-underscore-to-camel-case: true
