--- a/tour/src/main/resources/application.yml
+++ b/tour/src/main/resources/application.yml
@@ -2,15 +2,15 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/tour?useSSL=false
+    url: jdbc:mysql://1.95.50.203:3306/tour?useSSL=false
     username: root
-    password: 1234
+    password: mysql.hw.2002.yy
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   servlet:
     multipart:
      #单个文件
-      max-file-size: 10MB
+      max-file-size: 50MB
       #单次请求
       max-request-size: 100MB
 mybatis:
