--- a/tour/pom.xml
+++ b/tour/pom.xml
@@ -15,6 +15,10 @@
     <name>tour</name>
     <description>tour</description>
     <properties>
+
+            <maven.compiler.source>17</maven.compiler.source>
+            <maven.compiler.target>17</maven.compiler.target>
+
         <java.version>17</java.version>
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <dynamic-datasource-spring-boot-starter.version>4.1.3</dynamic-datasource-spring-boot-starter.version>
@@ -105,6 +109,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.4.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.4.0</version>
+        </dependency>
          <!--email-->
         <dependency>
             <groupId>org.eclipse.angus</groupId>
@@ -115,6 +124,7 @@
 
     <build>
         <plugins>
+            <!-- Spring Boot Maven 插件，用于打包可执行的jar或war文件 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -127,6 +137,19 @@
                     </excludes>
                 </configuration>
             </plugin>
+
+            <!-- Maven Compiler 插件，用于编译Java源代码 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version> <!-- 可以考虑更新到最新版本 -->
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+
+            <!-- 如果有其他插件，也可以在这里继续添加 -->
         </plugins>
     </build>
 
